[gd_scene load_steps=13 format=3 uid="uid://jbr74vi0plpk"]

[ext_resource type="Texture2D" uid="uid://3ed5kwvf6jbu" path="res://assets/Entities/Enemy/Guard/Guard.png" id="1_c6ymi"]
[ext_resource type="Script" path="res://Scripts/guard.gd" id="1_wnd2e"]
[ext_resource type="PackedScene" uid="uid://db26mpx05ksgk" path="res://assets/Entities/Enemy/Guard/GuardProjectile.tscn" id="2_s2g14"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ivba8"]
radius = 9.0

[sub_resource type="Animation" id="Animation_dynqj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 4)]
}

[sub_resource type="Animation" id="Animation_i6chp"]
resource_name = "death"
length = 0.75
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2)]
}

[sub_resource type="Animation" id="Animation_vssc4"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.375, 0.55, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4)]
}

[sub_resource type="Animation" id="Animation_xyuct"]
resource_name = "jump"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.05, 0.275),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3)]
}

[sub_resource type="Animation" id="Animation_dfq4t"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.275, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="Animation" id="Animation_dktv7"]
resource_name = "shoot"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.225, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t2cvw"]
_data = {
"RESET": SubResource("Animation_dynqj"),
"death": SubResource("Animation_i6chp"),
"idle": SubResource("Animation_vssc4"),
"jump": SubResource("Animation_xyuct"),
"run": SubResource("Animation_dfq4t"),
"shoot": SubResource("Animation_dktv7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_602wt"]
size = Vector2(336, 77.375)

[node name="Guard1" type="CharacterBody2D"]
script = ExtResource("1_wnd2e")
projectile = ExtResource("2_s2g14")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-27, -32)
texture = ExtResource("1_c6ymi")
centered = false
hframes = 17
vframes = 11
frame = 68

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_ivba8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t2cvw")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -22.6875)
shape = SubResource("RectangleShape2D_602wt")

[node name="WallChecker" type="RayCast2D" parent="."]
position = Vector2(1, -12)
rotation = -1.5708
target_position = Vector2(-9.53674e-07, 17)
collision_mask = 2

[node name="PlayerChecker" type="RayCast2D" parent="."]
rotation = -1.5708
target_position = Vector2(-6.38186e-06, 146)

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
